syntax = "proto3";

package notif;

option go_package = "/notification_service";

service NotificationService {
  rpc ResetNotif (ResetRequest) returns (Response);
}

message Response {
    int32 code = 1;
    string message = 2;
}

//ResetStruct
message ResetRequest {
    string email = 1;
    int32 resetCode = 2;
}


//protoc --go_out=. --go-grpc_out=. notification_service.proto


